# cetra

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  FindLibraries.cmake  LICENSE  Makefile  README.md  axes_vert.glsl  build.sh  camera.h  cwalk.c  cwalk.h  geo.glsl  import.c  import.h  light.c  light.h  main.c  mesh.c  mesh.h  pbr_frag.glsl  pbr_vert.glsl  scene.c  scene.h  str.c  str.h  texture.h  uthash.h  util.c
apps/: CMakeLists.txt
apps/gametest/: CMakeLists.txt  Makefile
apps/gametest/src/: gametest.c
apps/pcb/: Makefile
apps/pcb/src/: pcb.c
apps/render/: CMakeLists.txt  Makefile
apps/render/src/: render.c
apps/shapes/: CMakeLists.txt  Makefile
apps/shapes/src/: shapes.c
apps/splash/: CMakeLists.txt
apps/splash/src/: splash.c
apps/tree/: CMakeLists.txt  Makefile
apps/tree/src/: tree.c
assets/: c64.fbx
cetra/: CMakeLists.txt  Makefile  gen_shader_header.py
cetra/shaders/: ibl_brdf_frag.glsl  ibl_cubemap_vert.glsl  ibl_equirect_frag.glsl  ibl_irradiance_frag.glsl  ibl_prefilter_frag.glsl  lines_vert.glsl  outlines_geo.glsl  pbr_frag.glsl  pbr_skinned_vert.glsl  pbr_vert.glsl  shadow_depth_frag.glsl  shape_frag.glsl  shape_geo.glsl  shape_vert.glsl  skybox_frag.glsl  text_frag.glsl  text_vert.glsl  xyz_frag.glsl  xyz_vert.glsl
cetra/src/: animation.c  animation.h  app.c  app.h  async_loader.c  async_loader.h  camera.c  camera.h  common.c  common.h  engine.c  engine.h  geometry.c  geometry.h  ibl.c  ibl.h  import.c  import.h  input.c  input.h  intersect.c  intersect.h  light.c  light.h  material.c  material.h  mesh.c  mesh.h  program.c  program.h  render.c  render.h  scene.c  scene.h  shader.c  shader.h  shader_strings.h  shadow.c  shadow.h  text.c  (+9 more)
cetra/src/ext/: cwalk.c  cwalk.h  log.c  log.h  nuklear.h  nuklear_glfw_gl3.h  nuklear_glfw_gl4.h  progressbar.c  progressbar.h  stb_image.h  uthash.h
cetra/src/game/: character.c  character.h  component.h  entity.c  entity.h  game.c  game.h  input.c  input.h  physics.c  physics.h
models/: monkey.fbx
shaders/: axes_frag.glsl  axes_vert.glsl  light_outlines_frag.glsl  light_outlines_geo.glsl  light_outlines_vert.glsl  pbr_frag.glsl  pbr_geo.glsl  pbr_vert.glsl  red_frag.glsl
src/: axes_frag.glsl  axes_vert.glsl  camera.c  camera.h  common.h  engine.c  engine.h  geometry.c  geometry.h  import.c  import.h  light.c  light.h  main.c  material.c  material.h  mesh.c  mesh.h  nuklear_glfw_gl3.h  pbr_frag.glsl  program.c  program.h  progressbar.c  render.c  render.h  scene.c  scene.h  shader.c  shader.h  statusbar.c  statusbar.h  texture.c  texture.h  util.c  util.h
src/apps/: render.c  shapes.c
src/apps/pcb/: README.txt  pcb.c
src/shaders/: light_outlines_vert.glsl  lines_vert.glsl  outlines_geo.glsl  pbr_vert.glsl
